--- a/mean/views/index.jade
+++ b/mean/views/index.jade
@@ -7,8 +7,46 @@ block content
 			|   
 
 	#chyron
-		#content
-			each item, index in data.chyron
-				span.item	#{item} 
-					if index < Object.keys(data.chyron).length - 1
-						img(src="images/logo.png")
+		canvas#content(height=90)
+		//- #content
+		//- 	each item, index in data.chyron
+		//- 		span.item	#{item} 
+		//- 			if index < Object.keys(data.chyron).length - 1
+		//- 				img(src="images/logo.png")
+
+
+
+	script.
+		var can, ctx, step, steps = 0, delay = 2;
+		var txt = 'Welcome! Hygiene with Chhota Bheem Installed 16,000 Times Worldwide 	This Friday, we\'ll be announcing the winners of our exclusive Optimus Ride experience LIVE on our Instagram';
+		var txtWidth;
+		function init() {
+			can = document.getElementById("content");
+			can.width = window.innerWidth;
+			ctx = can.getContext("2d");
+			ctx.fillStyle = "white";
+			ctx.font = "20pt Verdana";
+			ctx.textAlign = "center";
+			ctx.textBaseline = "middle";
+			txtWidth = ctx.measureText(txt).width;
+			step = can.width + ((txtWidth/2)-100);
+			steps = 0;
+			RunTextLeftToRight();
+		}
+
+		function RunTextLeftToRight() {
+			step--;
+			
+			ctx.clearRect(0, 0, can.width, can.height);
+			ctx.save();
+			ctx.translate(step, can.height / 2);
+			ctx.fillText(txt, 50, 0);
+			ctx.restore();
+			//- console.log(step)
+			if (step <= -txtWidth)
+			    step = can.width;
+			if (step > steps)
+			    var t = setTimeout('RunTextLeftToRight()', delay);
+		}
+
+		window.onload = function() { init(); };
