--- a/mean/views/index.jade
+++ b/mean/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
+	img#logo(src="images/logo.png", style="display:none")
+
 	.crossfade
 		each image, index in data.images
 			figure(style='background-image: url(https://res.cloudinary.com/engagement-lab-home/image/upload/c_scale,f_auto,w_1920/v10000/'+image.public_id+'); animation-delay: '+(6*index)+'s;')
@@ -12,26 +14,47 @@ block content
 		//- 	each item, index in data.chyron
 		//- 		span.item	#{item} 
 		//- 			if index < Object.keys(data.chyron).length - 1
-		//- 				img(src="images/logo.png")
+		//- 				
 
 
 
 	script.
-		var can, ctx, step, steps = 0, delay = 2;
-		var txt = 'Welcome! Hygiene with Chhota Bheem Installed 16,000 Times Worldwide 	This Friday, we\'ll be announcing the winners of our exclusive Optimus Ride experience LIVE on our Instagram';
-		var txtWidth;
+		var can, ctx, img, step, steps = 0, delay = 2;
+		
+		var txt = ['Welcome!', 'Hygiene with Chhota Bheem Installed 16,000 Times Worldwide', 'This Friday, we\'ll be announcing the winners of our exclusive Optimus Ride experience LIVE on our Instagram'];
+		var totalTxtWidth;
+		var itemTxtWidth = [];
+		
 		function init() {
+		
 			can = document.getElementById("content");
 			can.width = window.innerWidth;
 			ctx = can.getContext("2d");
 			ctx.fillStyle = "white";
-			ctx.font = "20pt Verdana";
-			ctx.textAlign = "center";
+			ctx.font = "20pt Work Sans";
+			//- ctx.textAlign = "center";
 			ctx.textBaseline = "middle";
-			txtWidth = ctx.measureText(txt).width;
-			step = can.width + ((txtWidth/2)-100);
+
+			  
+			img = document.getElementById("logo");
+			totalTxtWidth = ctx.measureText(txt.join(' ')).width;
+			
+			for(var i in txt)
+				itemTxtWidth.push(ctx.measureText(txt[i]).width)
+
+			step = can.width;
 			steps = 0;
+
 			RunTextLeftToRight();
+		
+		}
+
+		function getTxtPos(index) {
+			var length = 0;
+			for(var i = 0; i < index; i++)
+				length += itemTxtWidth[i]+100;
+
+			return length;
 		}
 
 		function RunTextLeftToRight() {
@@ -39,13 +62,18 @@ block content
 			
 			ctx.clearRect(0, 0, can.width, can.height);
 			ctx.save();
-			ctx.translate(step, can.height / 2);
-			ctx.fillText(txt, 50, 0);
+			ctx.translate(step, 0);
+			
+			for(var i in txt) {
+				ctx.fillText(txt[i], getTxtPos(i), can.height / 2);
+				i++;
+				ctx.drawImage(img, getTxtPos(i)-75, (can.height / 4)-4);
+			}
+
 			ctx.restore();
-			//- console.log(step)
-			if (step <= -txtWidth)
+			if (step <= -(totalTxtWidth+(itemTxtWidth.length*100)))
 			    step = can.width;
-			if (step > steps)
+			if (step > -(totalTxtWidth+(itemTxtWidth.length*100)))
 			    var t = setTimeout('RunTextLeftToRight()', delay);
 		}
 
