--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,12 +20,25 @@ body {
   margin: 0;
 }
 
+iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.video {
+	padding: 56.25% 0 0 0;
+	position: relative;
+}
+
 #chyron {
   position: absolute;
   display: inline-block;
   z-index: 20;
   bottom: 0;
-  height: 10%;
+  height: 12%;
   width: 100%;
   text-align: center;
   font-size: xx-large;
@@ -36,29 +49,18 @@ body {
   margin: 0 auto;
   white-space: nowrap;
 }
+
 #content {
 	position: relative;
 	display: inline-block;
-	/*width: 100%;*/
 }
-/*
-#content {
-  display: inline-block;
-  padding-left: 100%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-	animation: marquee 60s linear infinite;
-}*/
 
 .item {
 	display: inline-flex;
   align-items: center;
-	margin-right: 1%;
-	/*margin-left: 1%;*/
-	
+	margin-right: 1%;	
 }
 .item > img {
-	/*display: inline-grid;*/
 	min-width: 52px;
 	padding-left: 30px;
 }
