--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,9 +28,12 @@ iframe {
 	height: 100%;
 }
 
-.video {
-	padding: 56.25% 0 0 0;
-	position: relative;
+.video, video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 #chyron {
