--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,3 +6,4 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Work+Sans')
   body
     block content
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js')
