--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,4 +6,5 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Work+Sans')
   body
     block content
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.0/socket.io.slim.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js')
