Tweenjs for chyron.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,4 @@ html
     block content
   script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js')
-  //- script(src='https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.3.1/Tween.js', type='module')
+  script(src='/javascripts/tween.umd.js')
