--- a/views/index.jade
+++ b/views/index.jade
@@ -9,7 +9,7 @@ block content
 	//- 		|   
 
 	#video
-		video(autoplay='', muted='')
+		video(autoplay='', muted='', loop=true)
 			source(src=data, type='video/mp4')
 
 	#chyron
@@ -69,7 +69,7 @@ block content
 
 				textMesh = new THREE.Mesh(textGeo, textMaterial);
 				textGeo.computeBoundingBox();
-				textMesh.position.set(150, 0, 0)
+				textMesh.position.set(50, 0, 0)
 				scene.add(textMesh);
 
 				box = new THREE.Box3().setFromObject(textMesh);
@@ -77,16 +77,20 @@ block content
 				scene.updateMatrixWorld(true);
 		
 				new TWEEN.Tween(textMesh.position)
-					.to(textMesh.position.clone().setX(-50));
+					.to(textMesh.position.clone().setX(-50), 10000)
+					.repeat(Infinity)
+					.start();
 					
 				animate();
 			});
 
 		}
 
-		function animate() {
+		function animate(time) {
 
 			requestAnimationFrame(animate);
+
+			TWEEN.update(time);
 
 			//- if (textMesh) {
 
@@ -111,4 +115,4 @@ block content
 
 		}
 
-		//- window.onload = function() { init(); };
+		window.onload = function() { init(); };
