--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,5 +7,7 @@ html
   body
     block content
   script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.slim.js')
-  script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js')
-  script(src='/javascripts/tween.umd.js')
+  //- script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/109/three.min.js')
+  //- script(src='/javascripts/tween.umd.js')
+  script(src='https://code.createjs.com/1.0.0/createjs.min.js')
+  script(src='https://code.createjs.com/1.0.0/createjs.min.js')
